--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,7 +1,5 @@
 <ul>
   <li *ngFor="let product of products.product">
-      <div class="col-sm-5">
-        <span>{{product.albumName}}</span>
-      </div>
+      <a routerLink="/product/{{product.id}}" routerLinkActive="active">{{product.albumName}}</a>
   </li>
 </ul>
